# gba-sprite-engine

./: CMakeLists.txt  README.md  timespent.csv  timespentJelle.csv  timespentMichiel.csv  urls
Michiel_achtergrondTest/: CMakeLists.txt
Michiel_achtergrondTest/src/: main.cpp
Michiel_achtergrondTest/src/Map/: BesteMap.h  Huis_Spikes.h  Main_level.h  Main_level_Michiel.h  background.h  langeMap.h  try1.h  try64x64.h
Michiel_achtergrondTest/src/Tileset/: Pal_test.c  Pal_trans.c  Pal_trans.h
Michiel_achtergrondTest/src/scene1/: Labview1.h  PAL_SPEL.h  PAL_SPEL2.c  PAL_SPEL2.h  SPEL2PAL.c  SPEL2PAL.h  achtergrond20X18.h  probeerSpiegel.h  scene_1.cpp  scene_1.h  try4.h  try5.h  try6.h  try7.h
Michiel_achtergrondTest/src/startScene/: Labview1.h  blok2.h  probeerSpiegel.h  start_scene.cpp  start_scene.h  try1.h  try3.h
engine/: CMakeLists.txt
engine/include/libgba-sprite-engine/: gba_engine.h  scene.h
engine/src/: gba_engine.cpp  scene.cpp
engine/src/background/: background.cpp
game/: CMakeLists.txt
game/img/: four-seasons-tileset.c  four-seasons-tileset.h
game/src/: GenericScene.cpp  GenericScene.h  Sprites_StartScene.h.cpp  genericScene.cpp  genericScene.h  kurby.h  main.cpp  mainCharcters.h  start_scene.cpp  start_scene.h  test_image.h
game/src/Tileset/: PAL_SPEL54.c  tilesSpel.c  tilesSpel.h  tileset.c  tileset.h
game/src/end scene/: end_scene.h
game/src/end_scene/: end_scene.cpp  end_scene.h
game/src/maps/: backgroundCity.h  backgroundIce.h  mapScene1.h  mapScene2.h  mapScene3.h  mapScene4.h  mapScene4water.h
game/src/scene_1/: Main_background.h  Main_level.h  Main_level2.h  Nieuw128x32.h  blok2.c  blok2.h  domMap.h  klein_probeer.h  newBigMap.cpp  newBigMap.h  probleem2  scene_1.cpp  scene_1.h  tile_pal.c  tile_pal.h  tilemap.h  tilemap1.h  tilemap_Big1.h
game/src/scene_1/map/: testmap.h
game/src/scene_2/: scene_2.cpp  scene_2.h
game/src/scene_2/map/: mapScene2.h  mapScene2.h.h
game/src/scene_3/: scene_3.cpp  scene_3.h
game/src/scene_3/map/: mapScene3.h  maptest6464.h
game/src/scene_4/: scene_4.cpp  scene_4.h
game/src/scene_4/map/: mapScene4.h  mapScene4water.h
game/src/scene_start/: sonic_smaller16pixelsBreed.h  startSceneSprites.h  start_scene.cpp  start_scene.h
game/src/sprites/: circle.h  kurby.h  shared_kurby_sonic.h  shared_star_circle_sonic.h  sonic_for_kurby.h  sonic_for_star_circle.h  spritesPal.h  star.h
img/: Diagram.drawio
test/: CMakeLists.txt  scenetest.cpp
(+1 files in other folders)
